crates/test-files/fixtures/compile_errors/non_pub_init.fe
contract Foo {
    fn __init__() {}
}
